<resources>
    <string name="app_name">Diet Tracker</string>
    <string name="about_me">About Me</string>
    <string name="my_name">by Xie, Yuhui</string>
    <string name="my_email">yxie73@syr.edu</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="my_picture">my_pic</string>
    <string name="self_introduction">I enjoy Android Programming.</string>
    <string name="button_clear_all">Clear All</string>
    <string name="button_select_all">Select All</string>
    <string name="button_delete">Delete</string>
    <string name="poster">poster</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="task_2">Track</string>
    <string name="task_3">Summary</string>
    <string name="my_course">CIS600</string>
    <string name="str_title">Title</string>
    <string name="str_description">Description</string>
    <string name="str_image">Image</string>
    <string name="str_year">Year :</string>
    <string name="str_stars">Stars:</string>
    <string name="str_hello">Hello</string>
    <string name="str_title_task2">How Far You have Gone</string>
    <string name="str_title_task3">Summary</string>
    <string name="task_1">Plan</string>
    <string name="task_4">Information</string>
    <string name="start_tracking">Start Tracking</string>
    <string name="str_plan">Set Your Goal of Today</string>
    <string name="str_title_activity4">How To Stay On Track</string>
    <string name="activity3">Choose The Day You Want to look back</string>
    <string name="play">play</string>
    <string name="pause">pause</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAz4ZNgXyS4ivY1iWQXHEB_D_-xriSWmNo</string>
    <string name="tileofvideo">6 Signs You Are Not Eating Enough</string>


</resources>